src/ui/snapshots/pg_glimpse__ui__snapshot_tests__panel_table_stats_with_data.snap
---
source: src/ui/snapshot_tests.rs
assertion_line: 658
expression: buffer_to_string(&terminal)
---
╭ Table Stats [2] ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Table                                                          Size      SeqScan    IdxScan    Dead ↓     Dead%     Bloat[b] Last Vacuum  │
│public.orders                                                  1.0 GB    150        25000      5000       5.0%      6.1%     01-15 11:00  │
│public.users                                                   100.0 MB  5          50000      100        1.0%      -        never        │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
│                                                                                                                                          │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
