src/ui/snapshots/pg_glimpse__ui__snapshot_tests__panel_vacuum_progress_empty.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
╭ 🧹  Vacuum ───────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  No vacuums running                                                                              │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
