src/ui/snapshots/pg_glimpse__ui__snapshot_tests__panel_vacuum_progress_with_data.snap
---
source: src/ui/snapshot_tests.rs
assertion_line: 718
expression: buffer_to_string(&terminal)
---
╭ Vacuum Progress ─────────────────────────────────────────────────────────────────────────────────╮
│PID      Table                                        Phase                Progress   Dead Tuples │
│34567    public.large_table                           scanning heap        45.0%      12500       │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
