src/ui/snapshots/pg_glimpse__ui__snapshot_tests__panel_wait_events_empty.snap
---
source: src/ui/snapshot_tests.rs
assertion_line: 643
expression: buffer_to_string(&terminal)
---
╭ Wait Events ─────────────────────────────────────────────────────────────────╮
│                                                                              │
│  No active wait events                                                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
