src/ui/snapshots/pg_glimpse__ui__snapshot_tests__panel_wait_events_with_data.snap
---
source: src/ui/snapshot_tests.rs
assertion_line: 628
expression: buffer_to_string(&terminal)
---
╭ Wait Events ─────────────────────────────────────────────────────────────────╮
│          IO ███████████████████████ 5                                        │
│        Lock ██████████████ 3                                                 │
│      Client ████████████████████████████████████████████████████████ 12      │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
