src/ui/snapshots/pg_glimpse__ui__snapshot_tests__panel_wraparound_critical.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
╭ Transaction Wraparound ──────────────────────────────────────────────────────────────────────────╮
│Database                                              XID Age          Remaining        % Used    │
│critical                                              2.0B             147.0M           93.20%    │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
