src/ui/snapshots/pg_glimpse__ui__snapshot_tests__panel_wraparound_empty.snap
---
source: src/ui/snapshot_tests.rs
assertion_line: 761
expression: buffer_to_string(&terminal)
---
╭ Transaction Wraparound ──────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  No databases found                                                                              │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
