src/ui/snapshots/pg_glimpse__ui__snapshot_tests__panel_wraparound_with_data.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
╭ ⚠️  Wraparound ───────────────────────────────────────────────────────────────────────────────────╮
│Database                                              XID Age          Remaining        % Used    │
│production                                            150.0M           2.0B             7.00%     │
│template1                                             50.0M            2.1B             2.30%     │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
