src/ui/snapshots/pg_glimpse__ui__snapshot_tests__stats_panel_empty.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
╭ Server Stats ────────────────────────╮
│PG 15.4 · up XXXd XXh                 │
│DB: 0 B · 0/100 conn (0%)             │
│────────────────────────────────────  │
│Active: 0 ▁▃▅▆█▁▃▅▆█  Idle/Txn: 0  Wai│
│Locks: 0 █▁▅█▁▅█▁▅█ · Longest: 0s     │
│Cache: 0.0% ▁▂▃▃▄▅▆▆▇█                │
│Blks/s: 650/s ▁▂▃▃▄▅▆▆▇█              │
│────────────────────────────────────  │
│TPS: 1.5K/s ▁▂▃▃▄▅▆▆▇█                │
│────────────────────────────────────  │
│No replicas                           │
│────────────────────────────────────  │
│Ext: [ss] [bc]                        │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
╰──────────────────────────────────────╯
